fix spacing in project list page

--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -252,3 +252,6 @@ article.one-poem:after, section.post:after {
 .poem-content {
   text-align: center;
 }
+ul#projectList li {
+  margin: 10px 0;
+}
